[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
#panic = "abort"

[dependencies]
itertools = "0.13.0"
ndarray = "0.16.1"
nom = "7.1.1"
num = "0.4.0"
once_cell = "1.16.0"
regex = "1.7.0"
intervallum = "1.4.0"
gcollections = "1.5.0"
lazy_static = "1.5.0"
rayon = "1.10.0"
