[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

[profile.release]
#debug = false
lto = true
#panic = "abort"
codegen-units = 1

[dependencies]
itertools = "0.13.0"
ndarray = "0.16.1"
nom = "7.1.1"
#num = "0.4.0"
once_cell = "1.16.0"
regex = "1.7.0"
# intervallum = "1.4.0"
# gcollections = "1.5.0"
lazy_static = "1.5.0"
rayon = "1.10.0"
rustc-hash = "2.1.0"
z3 = { git = "https://github.com/prove-rs/z3.rs", rev = "4f9fcfe43ff2c78aadfaf57c4fab1f7cbe4aa8a8"}
